# Hetero-Mark

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CppLint.cmake  LICENSE  PUBLICATION  PUBLICATION.txt  README.md  clang-format  download_data.sh  run_all.py  test
hsa/fir_cl12/: CMakeLists.txt  FIR12  FirFilter.cc  FirFilter.h  kernel.cl  main.cc
hsa/iir_cl12/: CMakeLists.txt  IIR  IIR12  IirFilter.cc  IirFilter.h  IirKernelHsaLauncher.h  Makefile  iir.cc  iir.h  isa.txt  kernel.brig  kernel.cl  kernels.h  main.cc
hsa/iir_cl20/: CMakeLists.txt  IIR20  IirFilter.cc  IirFilter.h  isa.txt  main.cc
hsa/kmeans_cl12/: CMakeLists.txt  KMEANS  KMeans.cc  KMeans.h  kmeans.cc
src/: CMakeLists.txt
src/aes/: CMakeLists.txt  README  aes.c  aes.cc  aes.h  aes_Kernels.cl  aes_benchmark.cc  aes_benchmark.h  aes_command_line_options.cc  aes_command_line_options.h  kernel_ocl20.cl  main_ocl12.c  main_ocl20.c
src/aes/cl12/: CMakeLists.txt  aes_cl12_benchmark.cc  aes_cl12_benchmark.h  kernels.cl  main.cc
src/aes/cl20/: CMakeLists.txt  aes_cl20_benchmark.cc  aes_cl20_benchmark.h  main.cc
src/aes/cuda/: CMakeLists.txt  aes_cuda_benchmark.cu  aes_cuda_benchmark.h  aes_cuda_benchmark2.cu  main.cc
src/aes/hc/: CMakeLists.txt  aes_hc_benchmark.cc  aes_hc_benchmark.h  main.cc
src/aes/hip/: .aes_cuda_benchmark.cu.swo  CMakeLists.txt  aes_hip_benchmark.cu  aes_hip_benchmark.h  main.cc
src/aes/hsa/: CMakeLists.txt  aes_hsa_benchmark.cc  aes_hsa_benchmark.h  kernels.cl  main.cc
src/aes_cl12/: CMakeLists.txt  aes_cl12.c  aes_cl12.cc  aes_cl12.h  aes_cl12_Kernels.cl  main.cc
src/aes_cl20/: CMakeLists.txt  aes.cc  aes.h  aes_cl20.cc  aes_cl20.h  genText.sh  main.cc
src/aes_cl20/data/: keyfile.txt
src/aes_cl20/include/: aes_cl20.h
src/be/: CMakeLists.txt  be_benchmark.cc  be_benchmark.h  be_command_line_options.cc  be_command_line_options.h
src/be/cl12/: CMakeLists.txt  be_cl12_benchmark.cc  be_cl12_benchmark.h  kernels.cl  main.cc
src/be/cuda/: CMakeLists.txt  be_cuda_benchmark.cu  be_cuda_benchmark.h  main.cc
src/be/hc/: CMakeLists.txt  be_hc_benchmark.cc  be_hc_benchmark.h  main.cc
src/be/hip/: CMakeLists.txt  be_hip_benchmark.cc  be_hip_benchmark.cu  be_hip_benchmark.h  (+1 more)
src/bs/: CMakeLists.txt  bs_benchmark.cc  bs_benchmark.h  bs_command_line_options.cc  bs_command_line_options.h
src/bst/: CMakeLists.txt  bst_benchmark.cc  bst_benchmark.h  bst_command_line_options.cc  bst_command_line_options.h
src/clUtil/: clUtil.cc  clUtil.h
src/common/: Argument.h  ArgumentValue.h  CMakeLists.txt  Makefile  OptionParserImpl.h  OptionParserImpl_unittest.cc  OptionSettingHelpPrinter.h  TimeKeeperImpl.cc  Timer.h  TimerImpl.cc
src/ep/: CMakeLists.txt  ep_benchmark.cc  ep_benchmark.h  ep_command_line_options.cc  ep_command_line_options.h
src/fdeb/: CMakeLists.txt  fdeb_benchmark.cc  fdeb_benchmark.h  fdeb_command_line_options.cc  fdeb_command_line_options.h
src/fir/: CMakeLists.txt  FIR_CL.c  README  fir.c  fir_Kernels.cl  fir_benchmark.cc  fir_benchmark.h  fir_command_line_options.cc  fir_command_line_options.h
src/fir_cl12/: CMakeLists.txt  FIR  FIR.cl  FIR_CL.c  FIR_CL.cc  FIR_CL.c~  Makefile~  eventlist.cpp  eventlist.h  eventlist.h~  main.cc
src/fir_cl20/: CMakeLists.txt  FIR_CL.cc  FIR_CL.h  fir.c  fir.cc  main.cc
src/ga/: CMakeLists.txt  ga_benchmark.cc  ga_benchmark.h  ga_command_line_options.cc  ga_command_line_options.h
src/gd/: CMakeLists.txt  benchmark.cc  benchmark.h  command_line_options.cc  command_line_options.h
src/hist/: CMakeLists.txt  hist_benchmark.cc  hist_benchmark.h  hist_command_line_options.cc  hist_command_line_options.h
src/hmm/: CMakeLists.txt  hmm.cc  hmm.h  hmm_Kernels.cl
src/hmm_cl12/: CMakeLists.txt  hmm_cl12.cc  hmm_cl12.h  main.cc
src/hmm_cl20/: CMakeLists.txt  hmm.cc  hmm.h  hmm_cl20.cc  hmm_cl20.h  main.cc
src/hsa/: CMakeLists.txt
src/hsa_deprecated/: CMakeLists.txt
src/iir/: CMakeLists.txt  IIR.cl  cuPrintf.cu  cuPrintf.cuh  iir.c  iir.cc  iir.h  parIIR.cu
src/iir_cl12/: parIIR.cc
src/iir_cl20/: CMakeLists.txt  main.cc  parIIR.cc
src/kerneloverhead_cl12/: CMakeLists.txt~  main.c
src/kerneloverhead_cl20/: CMakeLists.txt  CMakeLists.txt~  kernel.cl  main.c  main.cc  main.c~  tmp
src/kmeans/: CMakeLists.txt  cmake_clean.sh  kmeans.cc  kmeans.h  kmeans1.cc  kmeans_benchmark.cc  kmeans_benchmark.h  kmeans_command_line_options.cc  kmeans_command_line_options.h
src/kmeans_20/: kmeans.cc  kmeans.cl  kmeans.h
src/kmeans_cl12/: CMakeLists.txt  kmeans.cc  kmeans.cl  kmeans.h  main.cc  read_input.c  read_input.h  run.sh
src/kmeans_cl20/: CMakeLists.txt  cluster.c  kmeans.cc  kmeans.cl  kmeans.h  kmeans_clustering.c  read_input.c  rmse.c  run.sh
src/knn/: .knn_benchmark.h.swo  CMakeLists.txt  knn_benchmark.cc  knn_benchmark.h  knn_command_line_options.cc  knn_command_line_options.h  knn_cpu_partitioner.h
src/maxmem_cl12/: CMakeLists.txt  main.c
src/maxmem_cl20/: CMakeLists.txt  main.c
src/memcopy_cl12/: CMakeLists.txt  CMakeLists.txt~  main.c  main.cc
src/memcopy_cl20/: CMakeLists.txt  CMakeLists.txt~  main.c  main.cc
src/microbenchmark/: main.c
src/oclmemtests/: CMakeLists.txt~  main.c
src/opencl12/: CMakeLists.txt
src/opencl12_deprecated/: CMakeLists.txt
src/opencl20/: CMakeLists.txt
src/opencl20_deprecated/: CMakeLists.txt
src/pagerank_cl12/: CMakeLists.txt  pagerank.cc  pagerank.h  pagerank_Kernels.cl
src/pagerank_cl20/: CMakeLists.txt  _temp_1_Spectre.hsail  _temp_1_Spectre.i  _temp_1_Spectre.il  _temp_1_Spectre_&__OpenCL_pageRank_kernel_kernel.isa  pagerank.cc  pagerank.h
src/pr/: CMakeLists.txt  pr_benchmark.cc  pr_benchmark.h  pr_command_line_options.cc  pr_command_line_options.h
src/shallowWater/: CMakeLists.txt  shallowWater.cc  shallowWater.h  shallowWater_Kernels.cl
src/sw/: CMakeLists.txt  sw.cc  sw.h  sw_Kernels.cl  sw_benchmark.cc  sw_benchmark.h  sw_command_line_options.cc  sw_command_line_options.h
src/sw_cl12/: main.cc  sw.cc  sw.h
src/sw_cl20/: sw.cc
src/testSVM/: main.cc
src/tool/: AES_genText.sh  KMeans_datagen.cpp
src/tpl/: tpl.cc  tpl.h
(+874 files in other folders)
